# fisheye_stereo_lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  elte_params.xml  svs_params.xml
config/: elte_params_0deg.xml  elte_params_120deg.xml  elte_params_30deg.xml  elte_params_60deg.xml  elte_params_90deg.xml  stereo_sgbm_parameters.yaml  svs_params.xml
example/: batch_dewarper.cpp  demo.cpp  dewarper.cpp  stereo_sgbm_parameters.yaml  test.cpp
include/: CameraModel.h  CameraModel.hpp  FisheyeDewarper.hpp  Intrinsics.hpp  StereoPair.hpp  SurroundSystem.hpp  Utils.h  Utils.hpp  models.h  models.hpp
src/: FisheyeDewarper.cpp  StereoPair.cpp  SurroundSystem.cpp  Utils.cpp  dewarper.cpp
src/models/: Atan.cpp  CameraModel.cpp  DoubleSphere.cpp  KannalaB.cpp  Mei.cpp  Pinhole.cpp  RealAtan.cpp  Scaramuzza.cpp
